--- a/week4/随堂笔记.ipynb
+++ b/week4/随堂笔记.ipynb
@@ -1,133 +1,68 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
-    "# 推荐系统之用户画像"
+    "\t\t\t\n",
+    "原理\tBGD，SGD，MBGD区别\t\t\t\t\n",
+    "工具\tSurprise中的Baseline算法\tMovieLens\t\t\t\n",
+    "工具\tSurprise中的SlopeOne算法\tMovieLens\t\t\t\n",
+    "原理\tK折交叉验证\t\t\t\t\n",
+    "原理\t评价指标：RMSE，MSE，FCP\t\t\t\t\n",
+    "工具\tDataFrame与Series使用\t\t\t\t\n",
+    "工具\tIndex索引 Groupby方法\t\t\t\t\n",
+    "工具\tmap(), lambda函数\t\t\t\t\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " ## 什么是用户画像\n",
-    "     用户画像是指根据用户的属性、偏好、行为、生活习惯等信息来对用户进行打标签。它在日常生活工作中都有重要应用：\n",
-    "     \n",
-    "     （1）精准营销：根据历史用户特征，分析产品的潜在用户和用户的潜在需求，针对特定群体，利用短信、邮件等方式进行营销\n",
-    "\n",
-    "     （2）用户统计：根据用户的属性、行为特征对用户进行分类后，统计不同特征下的用户数量、分布；分析不同用户画像群体的分布特征\n",
-    "\n",
-    "     （3）数据挖掘：以用户画像为基础构建推荐系统、搜索引擎、广告投放系统，提升服务精准度\n",
-    "\n",
-    "     （4）服务产品：对产品进行用户画像，对产品进行受众分析，更透彻地理解用户使用产品的心理动机和行为习惯，完善产品运营，提升服务质量\n",
-    "\n",
-    "     （5）行业报告&用户研究：通过用户画像分析可以了解行业动态，如人群消费习惯、消费偏好分析、不同地域品类消费差异分析\n",
-    "     \n",
-    " \n",
-    "     \n",
-    " \n",
-    " \n",
-    " ## 如何定义标签 \n",
-    "     定义标签就是构建用户画像的过程，它主要解决的是人生三大哲学问题：\n",
-    "         都是谁： 用户自身属性，如：身高，体重，性别，学历，籍贯,支付习惯，上网设备，\n",
-    "         从哪来 ： 对电商而言，有百度，谷歌，各大门户网站，贴吧，博客，直接进入等\n",
-    "         到哪去： 用户在系统中都做了些什么\n",
-    "     用户标签的三大准则：\n",
-    "         1.统一用户标识\n",
-    "         2.给用户打标签\n",
-    "         3.用标签知道业务\n",
+    "# 常用推荐算法\n",
     "   \n",
-    " ## 如何打标签，\n",
-    "     可以通过人工打标签\n",
-    "            PGC专家标签：效率低，质量高\n",
-    "            UGC用户标签：数量大，质量低，数据不统一\n",
-    "     通过算法挖掘标签：如 K-Means，EM聚类，Mean-Shift，DBSCAN，层次聚类，PCA等聚类算法\n"
+    "   ![avatar](./images/372.png)\n",
+    "   "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 标签挖掘算法\n",
+    "# 矩阵分解概念：\n",
+    "    矩阵分解，主要用于评分矩阵这种稀疏矩阵，它是一种隐语义模型，它是把原来的大矩阵，近似的分解成小矩阵的乘积，在实际推荐计算时不再使用大矩阵，而是使用分解得到的两个小矩阵，假设用户物品的评分矩阵A是m乘n维，即一共有m个用户，n个物品.通过一套算法转化为两个矩阵U和V,矩阵U的维度是m乘k，矩阵V的维度是k乘n，这里面的k就是隐语义，它的含义如下图所示\n",
+    "<img src=\"./images/373.png\" width=100 />\n",
+    "   \n",
+    "   \n",
+    "   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ALS进行矩阵分解的原理\n",
     " \n",
-    " 聚类算法means：\n",
-    "         步骤：是一种基于划分的聚类方法，选取初始中心点-启发式迭代-达到停止条件，其中在k-means中初始中心点的选择即是根据欲聚类的个数随机挑选，启发式迭代是衡量每个点与选取点的距离，并选择最小点鬼为一类，在对该类求平均，作为下次巨累的中心位置，停止条件是类中心点位置变化不大或者达到迭代次数阈值。其时间复杂度为o(n*m*k) 其中n为：数据量 m为feature k为标签数量，对于海量数据，为了提高效率可以使用分桶或者树结构或者随机投影森林\n",
-    "         优点：对于大数据集，k-means算法相对是可伸缩和高效的，它的计算复杂度接近线性\n",
-    "         缺点：初始中心点和离群点的影响每次的结果不稳定，结果通常不是全局最优而是局部最优解、无法很好地解决数据簇分布差别比较大的情况（比如一类是另外一类样本数量的10倍）、不太适用于离散分类、只适用于规则形状的中心簇等。但是瑕不掩瑜，它仍有很多优点：，尽管它通常以局部最优结束迭代，但一般情况下达到的局部最优也可以满足需求\n",
-    "  EM 算法：\n",
-    "  GMM算法\n",
-    "  \n",
-    "  \n",
-    " 如何使用标签：\n",
-    "      singleTagBased算法原理、使用方式\n",
-    "      评价指标\n",
-    " "
+    "   <img src=\"./images/361.jpg\" width=500 />\n",
+    "   然后通过最小交替二乘法实现"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 数据清洗的原则是什么"
+    "交替最小二乘法步骤：\n",
+    "\n",
+    "    Step1，固定Y 优化X 即：把y看作常量，x求偏导数\n",
+    "    Step2，固定X 优化Y 即：把x看作常量，y求偏导数\n",
+    "    重复Step1和2，直到X 和Y 收敛。每次固定一个矩阵，优化另一个矩阵\n",
+    "    注：\n",
+    "      矩阵性质： $$ (A+B)^T=A^T+B^T,（AB）^T=B^T*A^T $$\n",
+    "      \n",
+    "隐形行为需要加上置信度：由于有时候隐形行为会发生多次，需要用它来模拟喜欢强度，此时表现形式如下：\n",
+    "   <img src=\"./images/yx.jpg\"  width=800px/>\n",
+    "     "
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 如何进行数据清洗"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "raw",
