--- a/week4/作业.ipynb
+++ b/week4/作业.ipynb
@@ -11,21 +11,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ALS都有哪些应用场景（能简单说明ALS的应用场景）\n"
+    "## ALS都有哪些应用场景（能简单说明ALS的应用场景）\n",
+    "    1、ALS算法用来补全用户评分矩阵。由于用户评分矩阵比较稀疏，将用户评分矩阵进行分解，变成V和U的乘积。通过求得V和U两个小的矩阵来补\n",
+    "      全用户评分矩阵。\n",
+    "    2、ALS算法使用交替最小二乘法来进行求解。\n",
+    "    3、ALS分为显示反馈和隐式反馈两种。显示反馈是指用户有明确的评分。对于商品推荐来说，大部分是通过用户的行为，获取隐式反馈的评分。\n",
+    "       隐式反馈评分矩阵需要进行处理，如果有用户评分则置为1，没有则赋值为0。但是对这个处理后的评分矩阵，再有一个置信度来评价这个评分。\n",
+    "       置信度等于1+a*用户真实评分\n",
+    "    4、ALS的代价函数是估计值和现有的评分值误差的平方和，引入了L2正则\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ALS进行矩阵分解的时候，为什么可以并行化处理（理解ALS的原理，并能用自己的语言解释ALS能并行化的原因）"
+    "## ALS进行矩阵分解的时候，为什么可以并行化处理（理解ALS的原理，并能用自己的语言解释ALS能并行化的原因）\n",
+    "    这里的并行计算是值不同特征向量X、Y之间的并行计算,最小二乘法是通过最小化误差的平方和来寻找和数据最匹配的函数。使用交替最小二乘法\n",
+    "    来求解。步骤是先设置一个特征值X，然后求解另一个特征矩阵Y。然后再固定一个矩阵Y，求解另一个矩阵X。这就是交替二乘法的步骤。在矩阵\n",
+    "    求解的过程中，比如固定Y，求解X的话，目标评分矩阵A。X的每一行可以独立求解，X的第i行和Y的计算得到A的第i行。这样的话，对于每一步来说，\n",
+    "    X或者Y的行或者列都是可以独立并行求解的。这样ALS就可以进行并行化计算了。"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 梯度下降法中的批量梯度下降（BGD），随机梯度下降（SGD），和小批量梯度下降有什么区别（MBGD）（能说明三种梯度下降的区别）"
+    "## 梯度下降法中的批量梯度下降（BGD），随机梯度下降（SGD），和小批量梯度下降有什么区别（MBGD）（能说明三种梯度下降的区别）\n",
+    "    BGD:每次迭代时使用所有的样本来更新参数,速度慢，但迭代次数少；可以将所有的样本放在一个矩阵中，实现并行计算,在整个数据集上确定梯度\n",
+    "        下降的方向，当目标函数为凸函数时，BGD一定可以达到全局最优。\n",
+    "    SGD:每次迭代使用一个样本来更新参数，速度快，但是不利于实现并行操作，容易陷入局部最优，因为单个样本不能代表整体样本的趋势\n",
+    "    MBGD:它是BGD和SGD的综合，每次迭代使用一批样本来更新参数"
    ]
   },
   {
