--- a/week4/作业.ipynb
+++ b/week4/作业.ipynb
@@ -61,7 +61,358 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 对MovieLens数据集进行评分预测工具：可以使用Surprise或者其他说明使用的模型，及简要原理（1、完成代码，流程正确2、能使用Surprise或其他工具，并对使用模型的原理进行说明）"
+    "## 对MovieLens数据集进行评分预测工具：可以使用Surprise或者其他说明使用的模型，及简要原理（1、完成代码，流程正确2、能使用Surprise或其他工具，并对使用模型的原理进行说明）\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-12-03T14:08:28.034276Z",
+     "start_time": "2020-12-03T13:33:44.263904Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NormalPredictor第一次运行\n",
+      "采用NormalPredictor方式预测，参数为None\n",
+      "RMSE: 1.4316\n",
+      "RMSE: 1.4341\n",
+      "RMSE: 1.4328\n",
+      "用户196对电影302的评分预测为1.9324761555437031\n",
+      "用户196对电影592的评分预测为4.085282160843213,实际得分为4.0\n",
+      "用户196对电影709的评分预测为4.637768700542509,实际得分为3.0\n",
+      "用户196对电影1088的评分预测为3.379558528171796,实际得分为5.0\n",
+      "用户196对电影2846的评分预测为3.877383675920515,实际得分为2.0\n",
+      "NormalPredictor第一次运行结束\n",
+      "NormalPredictor第二次运行\n",
+      "采用NormalPredictor方式预测，参数为None\n",
+      "RMSE: 1.4320\n",
+      "RMSE: 1.4330\n",
+      "RMSE: 1.4336\n",
+      "用户196对电影302的评分预测为4.122559863095595\n",
+      "用户196对电影592的评分预测为2.9554838094242544,实际得分为4.0\n",
+      "用户196对电影709的评分预测为5,实际得分为3.0\n",
+      "用户196对电影1088的评分预测为4.138764257794863,实际得分为5.0\n",
+      "用户196对电影2846的评分预测为3.116690515426584,实际得分为2.0\n",
+      "NormalPredictor第二次运行结束\n",
+      "BaselineOnly的als第一次运行\n",
+      "采用BaselineOnly方式预测，参数为{'method': 'als', 'n_epochs': 5, 'reg_u': 12, 'reg_i': 5}\n",
+      "Estimating biases using als...\n",
+      "RMSE: 0.8617\n",
+      "Estimating biases using als...\n",
+      "RMSE: 0.8650\n",
+      "Estimating biases using als...\n",
+      "RMSE: 0.8645\n",
+      "用户196对电影302的评分预测为4.168211921957271\n",
+      "用户196对电影592的评分预测为3.8189558842329996,实际得分为4.0\n",
+      "用户196对电影709的评分预测为3.705614290389705,实际得分为3.0\n",
+      "用户196对电影1088的评分预测为3.6381408922880323,实际得分为5.0\n",
+      "用户196对电影2846的评分预测为3.6190410224055327,实际得分为2.0\n",
+      "BaselineOnly的als第一次运行结束\n",
+      "BaselineOnly的als第二次运行\n",
+      "采用BaselineOnly方式预测，参数为{'method': 'als', 'n_epochs': 5, 'reg_u': 12, 'reg_i': 5}\n",
+      "Estimating biases using als...\n",
+      "RMSE: 0.8640\n",
+      "Estimating biases using als...\n",
+      "RMSE: 0.8632\n",
+      "Estimating biases using als...\n",
+      "RMSE: 0.8644\n",
+      "用户196对电影302的评分预测为4.180530453313185\n",
+      "用户196对电影592的评分预测为3.799319207473065,实际得分为4.0\n",
+      "用户196对电影709的评分预测为3.663322174150787,实际得分为3.0\n",
+      "用户196对电影1088的评分预测为3.615759644373453,实际得分为5.0\n",
+      "用户196对电影2846的评分预测为3.6129524037564265,实际得分为2.0\n",
+      "BaselineOnly的als第二次运行结束\n",
+      "BaselineOnly的method第一次运行\n",
+      "采用BaselineOnly方式预测，参数为{'method': 'sgd', 'n_epochs': 5}\n",
+      "Estimating biases using sgd...\n",
+      "RMSE: 0.8738\n",
+      "Estimating biases using sgd...\n",
+      "RMSE: 0.8745\n",
+      "Estimating biases using sgd...\n",
+      "RMSE: 0.8752\n",
+      "用户196对电影302的评分预测为3.850299700907578\n",
+      "用户196对电影592的评分预测为3.448749045355395,实际得分为4.0\n",
+      "用户196对电影709的评分预测为3.5646155162066004,实际得分为3.0\n",
+      "用户196对电影1088的评分预测为3.4036711272716764,实际得分为5.0\n",
+      "用户196对电影2846的评分预测为3.475560865691728,实际得分为2.0\n",
+      "BaselineOnly第一次运行结束\n",
+      "BaselineOnly的sgd第二次运行\n",
+      "采用BaselineOnly方式预测，参数为{'method': 'sgd', 'n_epochs': 5}\n",
+      "Estimating biases using sgd...\n",
+      "RMSE: 0.8748\n",
+      "Estimating biases using sgd...\n",
+      "RMSE: 0.8722\n",
+      "Estimating biases using sgd...\n",
+      "RMSE: 0.8759\n",
+      "用户196对电影302的评分预测为4.027580776589683\n",
+      "用户196对电影592的评分预测为3.5415394830244664,实际得分为4.0\n",
+      "用户196对电影709的评分预测为3.6572358275403407,实际得分为3.0\n",
+      "用户196对电影1088的评分预测为3.5800626217010483,实际得分为5.0\n",
+      "用户196对电影2846的评分预测为3.6535703040505587,实际得分为2.0\n",
+      "BaselineOnly的sgd第二次运行结束\n",
+      "KNNBasic第一次运行\n",
+      "采用KNNBasic方式预测，参数为None\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "RMSE: 0.9013\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "RMSE: 0.9060\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "RMSE: 0.9044\n",
+      "用户196对电影302的评分预测为3.759476466732245\n",
+      "用户196对电影592的评分预测为4.0,实际得分为4.0\n",
+      "用户196对电影709的评分预测为3.3399736570908067,实际得分为3.0\n",
+      "用户196对电影1088的评分预测为4.554098239534151,实际得分为5.0\n",
+      "用户196对电影2846的评分预测为3.089510773082392,实际得分为2.0\n",
+      "KNNBasic第一次运行结束\n",
+      "KNNBasic第二次运行\n",
+      "采用KNNBasic方式预测，参数为None\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "RMSE: 0.9039\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "RMSE: 0.9033\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "RMSE: 0.9052\n",
+      "用户196对电影302的评分预测为3.8405172134401124\n",
+      "用户196对电影592的评分预测为4.0,实际得分为4.0\n",
+      "用户196对电影709的评分预测为3.3487273572977894,实际得分为3.0\n",
+      "用户196对电影1088的评分预测为4.647978843310836,实际得分为5.0\n",
+      "用户196对电影2846的评分预测为3.14657463437315,实际得分为2.0\n",
+      "KNNBasic第二次运行结束\n",
+      "KNNBaseline第一次运行\n",
+      "采用KNNBaseline方式预测，参数为None\n",
+      "Estimating biases using als...\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "RMSE: 0.8579\n",
+      "Estimating biases using als...\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "RMSE: 0.8555\n",
+      "Estimating biases using als...\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "RMSE: 0.8604\n",
+      "用户196对电影302的评分预测为4.265942539079085\n",
+      "用户196对电影592的评分预测为4.134301685203643,实际得分为4.0\n",
+      "用户196对电影709的评分预测为3.7924685631191495,实际得分为3.0\n",
+      "用户196对电影1088的评分预测为4.5166154996506025,实际得分为5.0\n",
+      "用户196对电影2846的评分预测为3.570505481084129,实际得分为2.0\n",
+      "KNNBaseline第一次运行结束\n",
+      "KNNBaseline第二次运行\n",
+      "采用KNNBaseline方式预测，参数为None\n",
+      "Estimating biases using als...\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "RMSE: 0.8567\n",
+      "Estimating biases using als...\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "RMSE: 0.8598\n",
+      "Estimating biases using als...\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "RMSE: 0.8577\n",
+      "用户196对电影302的评分预测为4.034235969353741\n",
+      "用户196对电影592的评分预测为4.2283247870936425,实际得分为4.0\n",
+      "用户196对电影709的评分预测为3.5257640520762137,实际得分为3.0\n",
+      "用户196对电影1088的评分预测为4.642768383956629,实际得分为5.0\n",
+      "用户196对电影2846的评分预测为3.6299982083679354,实际得分为2.0\n",
+      "KNNBaseline第二次运行结束\n"
+     ]
+    }
+   ],
+   "source": [
+    "#加载相关包\n",
+    "# !pip install surprise\n",
+    "from surprise import Dataset\n",
+    "from surprise import Reader\n",
+    "from surprise import BaselineOnly, KNNBasic,NormalPredictor\n",
+    "from surprise import KNNBaseline\n",
+    "from surprise import accuracy\n",
+    "from surprise.model_selection import KFold\n",
+    "import pandas as pd \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# reg_i：物品的正则化参数，默认为10。\n",
+    "# reg_u：用户的正则化参数，默认为15 。\n",
+    "# n_epochs：迭代次数，默认为10\n",
+    "# 使用als方式\n",
+    "\n",
+    "# 加载数据\n",
+    "def load_data():\n",
+    "    reader = Reader(line_format='user item rating timestamp', sep=',', skip_lines=1)\n",
+    "    data = Dataset.load_from_file('./code/MovieLens/ratings.csv', reader=reader)\n",
+    "    return data\n",
+    "#把数据转换成dataframe\n",
+    "def data_to_df(data):\n",
+    "    raw_ratings = data.raw_ratings\n",
+    "    #用户id\n",
+    "    userId=[]\n",
+    "    #电影id\n",
+    "    itemId=[]\n",
+    "    #评分\n",
+    "    rate=[]\n",
+    "    for raw in raw_ratings:\n",
+    "        userId.append(raw[0])\n",
+    "        itemId.append(raw[1])\n",
+    "        rate.append(raw[2])\n",
+    "    data_dit={\"userId\":userId,\"itemId\":itemId,\"rate\":rate}\n",
+    "    return pd.DataFrame(data_dit)\n",
+    "    \n",
+    "    \n",
+    "# 通过globals()方法对传入对字符串使用baseline方式，KNNBAseLine方式，以及NormalPredictor方式对评分预测\n",
+    "# NormalPredictor 认为用户对物品的评分是服从正态分布的，从而可以根据已有的评分的均值和方差 预测当前用户对其他物品评分的分数 \n",
+    "#                 评分数据是来自一个正态分布的数据，根据训练集的分布特征随机给出一个预测值\n",
+    "# BaselineOnly 由于不同用户评分不同，不同item评分也不同，不同时间评分也可能发生变化，所以该算法通过设立基线(用户对item评分的平均值)，\n",
+    "#              并引入用户的偏差以及item的偏差\n",
+    "# KNNBasic 是基于 一种协同过滤方法\n",
+    "# KNNBaseline 对于用户和物品的评分有高低，每个用户打分均值或者每个item打分的均值，去除基于baseline偏差运算的分数\n",
+    "def predict_rate(data,df,methods,bsl_options = None):\n",
+    "    print(\"采用{}方式预测，参数为{}\".format(methods,bsl_options))\n",
+    "    algo = None\n",
+    "    if(bsl_options):\n",
+    "        algo = globals()[methods](bsl_options)\n",
+    "    else:\n",
+    "        algo = globals()[methods]()\n",
+    "    data_set = data.build_full_trainset()\n",
+    "    kf = KFold(n_splits=3)\n",
+    "    for trainset, testset in kf.split(data):\n",
+    "        algo.fit(trainset)\n",
+    "        predictions = algo.test(testset)\n",
+    "        accuracy.rmse(predictions)\n",
+    "#     rank = globals()[methods](user, N)\n",
+    "    user_items=[(\"196\",\"302\"),(\"196\",\"592\"),(\"196\",\"709\"),(\"196\",\"1088\"),(\"196\",\"2846\")]\n",
+    "    for user_item in user_items:\n",
+    "        pred = algo.predict(user_item[0], user_item[1], r_ui=4)\n",
+    "        userItem=df[(df[\"userId\"]==user_item[0])&(df[\"itemId\"]==user_item[1])]\n",
+    "        userItem=list(userItem[\"rate\"]) \n",
+    "        if len(userItem)>0:\n",
+    "            print('用户{}对电影{}的评分预测为{},实际得分为{}'.format(user_item[0],user_item[1],pred.est,userItem[0])) \n",
+    "        else :\n",
+    "            print('用户{}对电影{}的评分预测为{}'.format(uid,iid,pred.est)) \n",
+    "    return\n",
+    "    \n",
+    "\n",
+    "# algo = NormalPredictor()\n",
+    "#     bsl_options = {'method': method,'n_epochs': 5,'reg_u': 12,'reg_i': 5}\n",
+    "\n",
+    "data =load_data()\n",
+    "df=data_to_df(data)\n",
+    "print('NormalPredictor第一次运行')\n",
+    "predict_rate(data,df,methods='NormalPredictor')\n",
+    "print('NormalPredictor第一次运行结束')\n",
+    "print('NormalPredictor第二次运行')\n",
+    "predict_rate(data,df,methods='NormalPredictor')\n",
+    "print('NormalPredictor第二次运行结束')\n",
+    "\n",
+    "bsl_options = {'method': 'als','n_epochs': 5,'reg_u': 12,'reg_i': 5}\n",
+    "print('BaselineOnly的als第一次运行')\n",
+    "predict_rate(data,df,methods='BaselineOnly',bsl_options=bsl_options)\n",
+    "print('BaselineOnly的als第一次运行结束')\n",
+    "print('BaselineOnly的als第二次运行')\n",
+    "predict_rate(data,df,methods='BaselineOnly',bsl_options=bsl_options)\n",
+    "print('BaselineOnly的als第二次运行结束')\n",
+    "\n",
+    "bsl_options = {'method': 'sgd','n_epochs': 5}\n",
+    "print('BaselineOnly的method第一次运行')\n",
+    "predict_rate(data,df,methods='BaselineOnly',bsl_options=bsl_options)\n",
+    "print('BaselineOnly第一次运行结束')\n",
+    "\n",
+    "print('BaselineOnly的sgd第二次运行')\n",
+    "predict_rate(data,df,methods='BaselineOnly',bsl_options=bsl_options)\n",
+    "print('BaselineOnly的sgd第二次运行结束')\n",
+    "\n",
+    "\n",
+    "\n",
+    "print('KNNBasic第一次运行')\n",
+    "predict_rate(data,df,methods='KNNBasic')\n",
+    "print('KNNBasic第一次运行结束')\n",
+    "\n",
+    "print('KNNBasic第二次运行')\n",
+    "predict_rate(data,df,methods='KNNBasic')\n",
+    "print('KNNBasic第二次运行结束')\n",
+    "\n",
+    "\n",
+    "print('KNNBaseline第一次运行')\n",
+    "predict_rate(data,df,methods='KNNBaseline')\n",
+    "print('KNNBaseline第一次运行结束')\n",
+    "\n",
+    "print('KNNBaseline第二次运行')\n",
+    "predict_rate(data,df,methods='KNNBaseline')\n",
+    "print('KNNBaseline第二次运行结束')\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-12-03T14:16:41.781320Z",
+     "start_time": "2020-12-03T14:16:10.772012Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "用户196对电影302的评分预测为4.322991780575918\n",
+      "用户196对电影592的评分预测为4.106334353228577,实际得分为4.0\n",
+      "用户196对电影709的评分预测为3.5717938536450426,实际得分为3.0\n",
+      "用户196对电影1088的评分预测为3.53784749629544,实际得分为5.0\n",
+      "用户196对电影2846的评分预测为3.6585519050362816,实际得分为2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from surprise import SlopeOne\n",
+    "algo = SlopeOne()\n",
+    "data_set = data.build_full_trainset()\n",
+    "algo.fit(data_set)\n",
+    "# 对指定用户和商品进行评分预测\n",
+    "user_items=[(\"196\",\"302\"),(\"196\",\"592\"),(\"196\",\"709\"),(\"196\",\"1088\"),(\"196\",\"2846\")]\n",
+    "for user_item in user_items:\n",
+    "    pred = algo.predict(user_item[0], user_item[1], r_ui=4)\n",
+    "    userItem=df[(df[\"userId\"]==user_item[0])&(df[\"itemId\"]==user_item[1])]\n",
+    "    userItem=list(userItem[\"rate\"]) \n",
+    "    if len(userItem)>0:\n",
+    "        print('用户{}对电影{}的评分预测为{},实际得分为{}'.format(user_item[0],user_item[1],pred.est,userItem[0])) \n",
+    "    else :\n",
+    "        print('用户{}对电影{}的评分预测为{}'.format(uid,iid,pred.est)) \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-12-03T12:47:33.364614Z",
+     "start_time": "2020-12-03T12:47:33.336017Z"
+    }
+   },
+   "source": [
+    "从上面的运行结果可以看出，NormalPredictor的预测评分随机性比较大，与用户实际评分差距也比较大；BaselineOnly的稳定性比较好\n",
+    "KNNBasic与KNNBaseline的运行效率很差，但是他们可以与用户评分最接近，用他们更可以反应用户对该item的喜好度"
    ]
   },
   {
