--- a/week4/作业.ipynb
+++ b/week4/作业.ipynb
@@ -403,11 +403,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 123,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-03T15:23:32.034314Z",
-     "start_time": "2020-12-03T15:23:32.028905Z"
+     "end_time": "2020-12-03T15:31:58.778044Z",
+     "start_time": "2020-12-03T15:31:58.772251Z"
     }
    },
    "outputs": [
@@ -416,7 +416,34 @@
      "output_type": "stream",
      "text": [
       "{'战斗': [['施法', '，', '结果', '。']], '施法': [['主语', '动作', '技能']], '结果': [['主语', '获得', '效果']], '主语': [['张飞'], ['关羽'], ['赵云'], ['典韦'], ['许褚'], ['刘备'], ['黄忠'], ['曹操'], ['鲁班七号'], ['貂蝉']], '动作': [['施放'], ['使用'], ['召唤']], '技能': [['一骑当千'], ['单刀赴会'], ['青龙偃月'], ['刀锋铁骑'], ['黑暗潜能'], ['画地为牢'], ['守护机关'], ['狂兽血性'], ['龙鸣'], ['惊雷之龙'], ['破云之龙'], ['天翔之龙']], '获得': [['损失'], ['获得']], '效果': [['数值', '状态']], '数值': [['1'], ['1000'], ['5000'], ['100']], '状态': [['法力'], ['生命']]}\n",
-      "{'战斗': [['施法', '，', '结果', '。']], '施法': [['主语', '动作', '技能']], '结果': [['主语', '获得', '效果']], '主语': [['张飞'], ['关羽'], ['赵云'], ['典韦'], ['许褚'], ['刘备'], ['黄忠'], ['曹操'], ['鲁班七号'], ['貂蝉']], '动作': [['施放'], ['使用'], ['召唤']], '技能': [['一骑当千'], ['单刀赴会'], ['青龙偃月'], ['刀锋铁骑'], ['黑暗潜能'], ['画地为牢'], ['守护机关'], ['狂兽血性'], ['龙鸣'], ['惊雷之龙'], ['破云之龙'], ['天翔之龙']], '获得': [['损失'], ['获得']], '效果': [['数值', '状态']], '数值': [['1'], ['1000'], ['5000'], ['100']], '状态': [['法力'], ['生命']]}\n"
+      "[['施法', '，', '结果', '。']]\n",
+      "[['主语', '动作', '技能']]\n",
+      "[['张飞'], ['关羽'], ['赵云'], ['典韦'], ['许褚'], ['刘备'], ['黄忠'], ['曹操'], ['鲁班七号'], ['貂蝉']]\n",
+      "[['施放'], ['使用'], ['召唤']]\n",
+      "[['一骑当千'], ['单刀赴会'], ['青龙偃月'], ['刀锋铁骑'], ['黑暗潜能'], ['画地为牢'], ['守护机关'], ['狂兽血性'], ['龙鸣'], ['惊雷之龙'], ['破云之龙'], ['天翔之龙']]\n",
+      "[['主语', '获得', '效果']]\n",
+      "[['张飞'], ['关羽'], ['赵云'], ['典韦'], ['许褚'], ['刘备'], ['黄忠'], ['曹操'], ['鲁班七号'], ['貂蝉']]\n",
+      "[['损失'], ['获得']]\n",
+      "[['损失'], ['获得']]\n",
+      "[['损失'], ['获得']]\n",
+      "[['数值', '状态']]\n",
+      "[['1'], ['1000'], ['5000'], ['100']]\n",
+      "[['法力'], ['生命']]\n",
+      "刘备使用龙鸣，赵云损失1生命。\n",
+      "[['施法', '，', '结果', '。']]\n",
+      "[['主语', '动作', '技能']]\n",
+      "[['张飞'], ['关羽'], ['赵云'], ['典韦'], ['许褚'], ['刘备'], ['黄忠'], ['曹操'], ['鲁班七号'], ['貂蝉']]\n",
+      "[['施放'], ['使用'], ['召唤']]\n",
+      "[['一骑当千'], ['单刀赴会'], ['青龙偃月'], ['刀锋铁骑'], ['黑暗潜能'], ['画地为牢'], ['守护机关'], ['狂兽血性'], ['龙鸣'], ['惊雷之龙'], ['破云之龙'], ['天翔之龙']]\n",
+      "[['主语', '获得', '效果']]\n",
+      "[['张飞'], ['关羽'], ['赵云'], ['典韦'], ['许褚'], ['刘备'], ['黄忠'], ['曹操'], ['鲁班七号'], ['貂蝉']]\n",
+      "[['损失'], ['获得']]\n",
+      "[['损失'], ['获得']]\n",
+      "[['损失'], ['获得']]\n",
+      "[['数值', '状态']]\n",
+      "[['1'], ['1000'], ['5000'], ['100']]\n",
+      "[['法力'], ['生命']]\n",
+      "张飞 施放 画地为牢 ， 黄忠 损失 5000 法力 。\n"
      ]
     }
    ],
@@ -433,7 +460,7 @@
     "数值 => 1 | 1000 |5000 | 100 \n",
     "状态 => 法力 | 生命\n",
     "'''\n",
-    "\n",
+    "import random\n",
     "\n",
     "# 得到语法字典\n",
     "def getGrammarDict(gram, linesplit = \"\\n\", gramsplit = \"=>\"):\n",
@@ -445,12 +472,17 @@
     "        if not line.strip(): \n",
     "            continue\n",
     "        expr, statement = line.split(gramsplit)\n",
+    "        # =>前面的字符串作为key   对statement通过｜分割，把分割后内容通过空格分割，这样形成字典\n",
     "        result[expr.strip()] = [i.split() for i in statement.split(\"|\")]\n",
-    "    print(result)\n",
+    "#     print(result)\n",
     "    return result\n",
     "\n",
     "\n",
     "# 生成句子\n",
+    "# 句子内容格式已经确定 套用公式 如果为战斗 将会形成两句话 主要包含了施法 和 结果部分\n",
+    "# 施法部分是用 语 动作 技能组成的\n",
+    "# 结果部分是由 主语 获得 效果组成\n",
+    "# 如此依次寻找每个词语在字典中是否存在key，如果bu cun z\n",
     "def generate(gramdict, target, isEng = False):\n",
     "    if target not in gramdict: \n",
     "        return target\n",
@@ -462,7 +494,6 @@
     "    return blank.join(generate(gramdict, t, isEng) for t in find)\n",
     "\n",
     "gramdict = getGrammarDict(grammar)\n",
-    "print(gramdict)\n",
     "print(generate(gramdict,\"战斗\"))\n",
     "print(generate(gramdict,\"战斗\", True))\n",
     "\n",
