--- a/week4/作业.ipynb
+++ b/week4/作业.ipynb
@@ -482,7 +482,7 @@
     "# 句子内容格式已经确定 套用公式 如果为战斗 将会形成两句话 主要包含了施法 和 结果部分\n",
     "# 施法部分是用 语 动作 技能组成的\n",
     "# 结果部分是由 主语 获得 效果组成\n",
-    "# 如此依次寻找每个词语在字典中是否存在key，如果bu cun z\n",
+    "# 如此依次寻找每个词语在字典中是否存在key，如果不存在则为语句组成部分，如果存在则需要通过递归方式继续往下找数组中随机出来的词语\n",
     "def generate(gramdict, target, isEng = False):\n",
     "    if target not in gramdict: \n",
     "        return target\n",
