--- a/week4/随堂笔记.ipynb
+++ b/week4/随堂笔记.ipynb
@@ -67,7 +67,12 @@
   {
    "cell_type": "raw",
    "metadata": {},
-   "source": []
+   "source": [
+    "\n",
+    "未完成部分：\n",
+    "\n",
+    "但仍存在一些小问题，比如知识点总结不够具体，特别是后面的知识点，比如SGD、BaseLine、SlopeOne、pandas、如何阅读paper。另外对知识点也可以增加一些你自己的思考。继续加油~"
+   ]
   },
   {
    "cell_type": "raw",
