--- a/week5/随堂笔记.ipynb
+++ b/week5/随堂笔记.ipynb
@@ -94,7 +94,7 @@
    "source": [
     "# 概述\n",
     "    \n",
-    "    本堂课主要介绍了推荐系统机器学习中的基于隐语义矩阵分解模型模型的另外一种分解方式，奇异矩阵分解法svd。svd的数学原理以及缺点以及在推荐系统中的应用，和对它的改进方法funkSVD、BiasSVD、SVD++算法原理和Surprise中对应的SVD工具的使用\n",
+    "    本堂课主要介绍了推荐系统机器学习中的基于隐语义矩阵分解模型模型的另外一种分解方式，奇异矩阵分解法svd。svd的数学原理以及缺点以及在推荐系统中的应用，和对它的改进方法funkSVD、BiasSVD、SVD++算法原理和Surprise中对应的SVD工具的使用，与上节课内容相比SVD、MF、SVD++ 、FM、ALS 均完成了矩阵分解操作，区别在于SVD与 SVD++均需要矩阵填充， 而 funk-svd 与FM、 ALS 均采用MF分解模式，进行隐语义分解\n",
     "\n",
     " "
    ]
@@ -103,13 +103,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1 什么是特征值 特征向量(线性无关的彼此独立的)"
+    "#  svd矩阵分解原理与概念"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 什么是特征值 特征向量(线性无关的彼此独立的)\n",
+    "  \n",
+    "    在数学中特征向量是指对原来矩阵影响(拉伸或者缩放)最大的一组向量，它描述了变化的主要方向，特征值描述了该在该方向上的影响程度\n",
+    "    其数学概念为：设A是n阶方阵，如果数λ和n维非零列向量x使关系式Ax=λx成立，那么这样的数λ称为矩阵A特征值，非零向量x称为A的对应于特征值λ的特征向量(对于方正A而言，存在一个向量X使得A对X作用后只是对X进行了伸缩，方向并没有改变，则X就称为特征向量，λ为A特征值)\n",
+    "    \n",
+    "    如果一个矩阵是特征矩阵，那么各个特征之间一定是彼此独立的线性无关的，与朴素贝叶斯理论的前提条件(样本的每个特征之间是互相独立、互不影响的)相似\n",
+    "    在推荐系统中通过这两个概念可以提取矩阵的重要特征和对应的权重，\n",
+    "    在图片中可以将每列看作是一个向量，其中影响最大列的被称为特征向量，其权重值被称为特征值\n",
+    " \n",
+    "  "
    ]
   },
   {
    "cell_type": "raw",
    "metadata": {},
-   "source": []
+   "source": [
+    "## svd矩阵分解的数学推导\n",
+    "   根据概念Ax=λx可得到 (A-λE)x=0 "
+   ]
   },
   {
    "cell_type": "raw",
