--- a/week5/随堂笔记.ipynb
+++ b/week5/随堂笔记.ipynb
@@ -89,12 +89,16 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# 概述\n",
     "    \n",
     "    本堂课主要介绍了推荐系统机器学习中的基于隐语义矩阵分解模型模型的另外一种分解方式，奇异矩阵分解法svd。svd的数学原理以及缺点以及在推荐系统中的应用，和对它的改进方法funkSVD、BiasSVD、SVD++算法原理和Surprise中对应的SVD工具的使用，与上节课内容相比SVD、MF、SVD++ 、FM、ALS 均完成了矩阵分解操作，区别在于SVD与 SVD++均需要矩阵填充， 而 funk-svd 与FM、 ALS 均采用MF分解模式，进行隐语义分解\n",
+    "    \n",
+    "    ![image.png](attachment:image.png)\n",
+    "   \n",
     "\n",
     " "
    ]
@@ -134,7 +138,11 @@
   {
    "cell_type": "raw",
    "metadata": {},
-   "source": []
+   "source": [
+    "\n",
+    "\n",
+    "这周工作有点忙 没来得及弄"
+   ]
   },
   {
    "cell_type": "raw",
