--- a/week5/作业.ipynb
+++ b/week5/作业.ipynb
@@ -219,6 +219,146 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-12-15T10:24:34.437593Z",
+     "start_time": "2020-12-15T10:22:41.163629Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE: 0.8738\n",
+      "RMSE: 0.8722\n",
+      "RMSE: 0.8729\n",
+      "使用funkSVD的KFold=3交叉验验证预测计算得到的resme=0.8729777757736491\n"
+     ]
+    }
+   ],
+   "source": [
+    "from surprise import SVD\n",
+    "from surprise import Dataset\n",
+    "from surprise.model_selection import cross_validate\n",
+    "from surprise import Reader\n",
+    "from surprise import accuracy\n",
+    "from surprise.model_selection import KFold\n",
+    "import numpy as np\n",
+    "# 采用funksvd计算rmse\n",
+    "# 数据读取\n",
+    "reader = Reader(line_format='user item rating timestamp', sep=',', skip_lines=1)\n",
+    "data = Dataset.load_from_file('./code/MovieLens/ratings.csv', reader=reader)\n",
+    "train_set = data.build_full_trainset()\n",
+    "\n",
+    "# 使用funkSVD\n",
+    "algo = SVD(biased=False)\n",
+    "\n",
+    "# 定义K折交叉验证迭代器，K=3\n",
+    "resme=[]\n",
+    "kf = KFold(n_splits=3)\n",
+    "for trainset, testset in kf.split(data):\n",
+    "    # 训练并预测\n",
+    "    algo.fit(trainset)\n",
+    "    predictions = algo.test(testset)\n",
+    "    # 计算RMSE\n",
+    "    resme.append(accuracy.rmse(predictions, verbose=True))\n",
+    "print('使用funkSVD的KFold=3交叉验验证预测计算得到的resme={}'.format(np.mean(resme)))\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-12-15T10:32:55.173730Z",
+     "start_time": "2020-12-15T10:31:00.919004Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE: 0.8473\n",
+      "RMSE: 0.8439\n",
+      "RMSE: 0.8451\n",
+      "使用BiasSVD的KFold=3交叉验验证预测计算得到的resme=0.845396937755225\n"
+     ]
+    }
+   ],
+   "source": [
+    "from surprise import SVD\n",
+    "from surprise import Dataset\n",
+    "from surprise.model_selection import cross_validate\n",
+    "from surprise import Reader\n",
+    "from surprise import accuracy\n",
+    "from surprise.model_selection import KFold\n",
+    "import numpy as np\n",
+    "# 采用funksvd计算rmse\n",
+    "# 数据读取\n",
+    "reader = Reader(line_format='user item rating timestamp', sep=',', skip_lines=1)\n",
+    "data = Dataset.load_from_file('./code/MovieLens/ratings.csv', reader=reader)\n",
+    "train_set = data.build_full_trainset()\n",
+    "\n",
+    "# 使用BiasSVD\n",
+    "algo = SVD(biased=True)\n",
+    "\n",
+    "# 定义K折交叉验证迭代器，K=3\n",
+    "resme=[]\n",
+    "kf = KFold(n_splits=3)\n",
+    "for trainset, testset in kf.split(data):\n",
+    "    # 训练并预测\n",
+    "    algo.fit(trainset)\n",
+    "    predictions = algo.test(testset)\n",
+    "    # 计算RMSE\n",
+    "    resme.append(accuracy.rmse(predictions, verbose=True))\n",
+    "print('使用BiasSVD的KFold=3交叉验验证预测计算得到的resme={}'.format(np.mean(resme))) \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2020-12-15T10:35:08.830Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from surprise import SVDpp\n",
+    "from surprise import Dataset\n",
+    "from surprise.model_selection import cross_validate\n",
+    "from surprise import Reader\n",
+    "from surprise import accuracy\n",
+    "from surprise.model_selection import KFold\n",
+    "import numpy as np\n",
+    "# 采用funksvd计算rmse\n",
+    "# 数据读取\n",
+    "reader = Reader(line_format='user item rating timestamp', sep=',', skip_lines=1)\n",
+    "data = Dataset.load_from_file('./code/MovieLens/ratings.csv', reader=reader)\n",
+    "train_set = data.build_full_trainset()\n",
+    "\n",
+    "# 使用 SVD++\n",
+    "algo = SVDpp()\n",
+    "\n",
+    "# 定义K折交叉验证迭代器，K=3\n",
+    "resme=[]\n",
+    "kf = KFold(n_splits=3)\n",
+    "for trainset, testset in kf.split(data):\n",
+    "    # 训练并预测\n",
+    "    algo.fit(trainset)\n",
+    "    predictions = algo.test(testset)\n",
+    "    # 计算RMSE\n",
+    "    resme.append(accuracy.rmse(predictions, verbose=True))\n",
+    "print('使用SVD++的KFold=3交叉验验证预测计算得到的resme={}'.format(np.mean(resme))) "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -249,6 +389,7 @@
    "source": [
     "# 加载jieba分词器件\n",
     "#!pip install jieba\n",
+    "# 通过分词器将文本中的内容拆分词组，并且保存到 /code/word2vec/three_kingdoms/segment/文件夹下\n",
     "import jieba\n",
     "import os\n",
     "def segment_lines(file_name, segment_out_dir, stopwords=[]):\n",
@@ -265,8 +406,8 @@
     "        with open(segment_out_name, 'wb') as f2:\n",
     "            f2.write(result)\n",
     "\n",
-    "file_name = './tcode/word2vec/three_kingdoms/source/three_kingdoms.txt'\n",
-    "segment_folder = './tcode/word2vec/three_kingdoms/segment/'                \n",
+    "file_name = './code/word2vec/three_kingdoms/source/three_kingdoms.txt'\n",
+    "segment_folder = './code/word2vec/three_kingdoms/segment/'                \n",
     "segment_lines(file_name, segment_folder)\n",
     "        "
    ]
@@ -297,7 +438,7 @@
     "import multiprocessing\n",
     "\n",
     "# 如果目录中有多个文件，可以使用PathLineSentences\n",
-    "segment_file = './tcode/word2vec/three_kingdoms/segment/' \n",
+    "segment_file = './code/word2vec/three_kingdoms/segment/' \n",
     "sentences = word2vec.PathLineSentences(segment_folder)\n",
     "\n",
     "# 设置模型参数，进行训练\n",
