--- a/week5/作业.ipynb
+++ b/week5/作业.ipynb
@@ -362,6 +362,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "svd++方式比较耗费内存和时间，计算rmse SVD++ >  bis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 使用Gensim中的Word2Vec对三国演义进行Word Embedding，分析和曹操最相近的词有哪些，曹操+刘备-张飞=? 数据集：three_kingdoms.txt"
    ]
   },
