--- a/week5/作业.ipynb
+++ b/week5/作业.ipynb
@@ -328,7 +328,15 @@
      "start_time": "2020-12-15T10:35:08.830Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE: 0.8285\n"
+     ]
+    }
+   ],
    "source": [
     "from surprise import SVDpp\n",
     "from surprise import Dataset\n",
@@ -362,7 +370,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "svd++方式比较耗费内存和时间，计算rmse SVD++ >  bis"
+    "svd++方式比较耗费内存和时间，计算rmse结果  biaseSVD 好于 funksvd"
    ]
   },
   {
