--- a/week5/作业.ipynb
+++ b/week5/作业.ipynb
@@ -478,24 +478,53 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2020-12-17T15:39:08.800Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n"
+     ]
+    }
+   ],
+   "source": [
+    "## KNNWithMeans 方式\n",
+    "from surprise import KNNWithMeans\n",
+    "from surprise import Dataset, Reader\n",
+    "import pandas as pd\n",
+    "\n",
+    "# 数据读取\n",
+    "reader = Reader(line_format='user item rating timestamp', sep=',', skip_lines=1)\n",
+    "data = Dataset.load_from_file('../week6/code/knn_cf/ratings.csv', reader=reader)\n",
+    "\n",
+    "# ItemCF 计算得分\n",
+    "# 取最相似的用户计算时，只取最相似的k个\n",
+    "algo = KNNWithMeans(k=50, sim_options={'user_based': False, 'verbose': 'True'})\n",
+    "resme=[]\n",
+    "mae=[]\n",
+    "kf = KFold(n_splits=3)\n",
+    "for trainset, testset in kf.split(data):\n",
+    "    # 训练并预测\n",
+    "    algo.fit(trainset)\n",
+    "    predictions = algo.test(testset)\n",
+    "    # 计算RMSE\n",
+    "    resme.append(accuracy.rmse(predictions, verbose=True))\n",
+    "    mae.append(accuracy.mae(predictions, verbose=True))\n",
+    "    uid = str(196)\n",
+    "    iid = str(302)\n",
+    "    pred = algo.predict(uid, iid)\n",
+    "\n",
+    "resme.append(np.mean(resme))\n",
+    "mae.append(np.mean(mae))\n",
+    "pd=pd.DataFrame(np.array([resme,mae]),index=['rmse','mae'],columns=['第一次','第二次','第三次','均值'])\n",
+    "print(pd) "
+   ]
   }
  ],
  "metadata": {
