--- a/week6/作业.ipynb
+++ b/week6/作业.ipynb
@@ -116,10 +116,82 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "perl ./code/libfm/triple_format_to_libfm.pl -in ./titanic/test.csv -target 1 -delete_column 0 -separator \"::\"\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## 使用DeepFM对movielens进行评分预测"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2020-12-17T14:38:52.187Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting tensorflow\n",
+      "  Downloading tensorflow-2.4.0-cp38-cp38-macosx_10_11_x86_64.whl (175.5 MB)\n",
+      "\u001b[K     |██████████████████████▊         | 124.3 MB 13 kB/s eta 1:04:168"
+     ]
+    }
+   ],
+   "source": [
+    "#!pip install deepctr\n",
+    "!pip install tensorflow\n",
+    "import pandas as pd\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from deepctr.models import DeepFM\n",
+    "from deepctr.inputs import SparseFeat,get_feature_names\n",
+    "\n",
+    "#数据加载\n",
+    "\n",
+    "data = pd.read_csv(\"./code/deepfm/movielens_sample.txt\")\n",
+    "sparse_features = [\"movie_id\", \"user_id\", \"gender\", \"age\", \"occupation\", \"zip\"]\n",
+    "target = ['rating']\n",
+    "\n",
+    "# 对特征标签进行编码\n",
+    "for feature in sparse_features:\n",
+    "    lbe = LabelEncoder()\n",
+    "    data[feature] = lbe.fit_transform(data[feature])\n",
+    "# 计算每个特征中的 不同特征值的个数\n",
+    "fixlen_feature_columns = [SparseFeat(feature, data[feature].nunique()) for feature in sparse_features]\n",
+    "print(fixlen_feature_columns)\n",
+    "linear_feature_columns = fixlen_feature_columns\n",
+    "dnn_feature_columns = fixlen_feature_columns\n",
+    "feature_names = get_feature_names(linear_feature_columns + dnn_feature_columns)\n",
+    "\n",
+    "# 将数据集切分成训练集和测试集\n",
+    "train, test = train_test_split(data, test_size=0.2)\n",
+    "train_model_input = {name:train[name].values for name in feature_names}\n",
+    "test_model_input = {name:test[name].values for name in feature_names}\n",
+    "\n",
+    "# 使用DeepFM进行训练\n",
+    "model = DeepFM(linear_feature_columns, dnn_feature_columns, task='regression')\n",
+    "model.compile(\"adam\", \"mse\", metrics=['mse'], )\n",
+    "history = model.fit(train_model_input, train[target].values, batch_size=256, epochs=1, verbose=True, validation_split=0.2, )\n",
+    "# 使用DeepFM进行预测\n",
+    "pred_ans = model.predict(test_model_input, batch_size=256)\n",
+    "# 输出RMSE或MSE\n",
+    "mse = round(mean_squared_error(test[target].values, pred_ans), 4)\n",
+    "rmse = mse ** 0.5\n",
+    "print(\"test RMSE\", rmse)"
    ]
   },
   {
@@ -132,9 +204,45 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2020-12-17T15:41:08.911Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "## KNNWithMeans 方式\n",
+    "from surprise import KNNWithMeans\n",
+    "from surprise import Dataset, Reader\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# 数据读取\n",
+    "reader = Reader(line_format='user item rating timestamp', sep=',', skip_lines=1)\n",
+    "data = Dataset.load_from_file('../week6/code/knn_cf/ratings.csv', reader=reader)\n",
+    "\n",
+    "# ItemCF 计算得分\n",
+    "# 取最相似的用户计算时，只取最相似的k个\n",
+    "algo = KNNWithMeans(k=50, sim_options={'user_based': False, 'verbose': 'True'})\n",
+    "resme=[]\n",
+    "mae=[]\n",
+    "kf = KFold(n_splits=3)\n",
+    "for trainset, testset in kf.split(data):\n",
+    "    # 训练并预测\n",
+    "    algo.fit(trainset)\n",
+    "    predictions = algo.test(testset)\n",
+    "    # 计算RMSE\n",
+    "    resme.append(accuracy.rmse(predictions, verbose=False))\n",
+    "    mae.append(accuracy.mae(predictions, verbose=False))\n",
+    "    uid = str(196)\n",
+    "    iid = str(302)\n",
+    "    pred = algo.predict(uid, iid)\n",
+    "\n",
+    "resme.append(np.mean(resme))\n",
+    "mae.append(np.mean(mae))\n",
+    "pd=pd.DataFrame(np.array([resme,mae]),index=['rmse','mae'],columns=['第一次','第二次','第三次','均值'])\n",
+    "print(pd) \n"
+   ]
   },
   {
    "cell_type": "code",
@@ -149,18 +257,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.3"
   },
   "toc": {
    "base_numbering": 1,
