--- a/week6/作业.ipynb
+++ b/week6/作业.ipynb
@@ -117,11 +117,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-12-18T05:23:39.671181Z",
+     "start_time": "2020-12-18T05:13:42.393662Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33mWARNING: Retrying (Retry(total=4, connect=None, read=None, redirect=None, status=None)) after connection broken by 'ReadTimeoutError(\"HTTPSConnectionPool(host='pypi.org', port=443): Read timed out. (read timeout=15)\")': /simple/deepctr/\u001b[0m\n",
+      "\u001b[33mWARNING: Retrying (Retry(total=3, connect=None, read=None, redirect=None, status=None)) after connection broken by 'ReadTimeoutError(\"HTTPSConnectionPool(host='pypi.org', port=443): Read timed out. (read timeout=15)\")': /simple/deepctr/\u001b[0m\n",
+      "\u001b[33mWARNING: Retrying (Retry(total=2, connect=None, read=None, redirect=None, status=None)) after connection broken by 'ConnectTimeoutError(<pip._vendor.urllib3.connection.HTTPSConnection object at 0x7f97c94fdeb0>, 'Connection to pypi.org timed out. (connect timeout=15)')': /simple/deepctr/\u001b[0m\n",
+      "\u001b[33mWARNING: Retrying (Retry(total=1, connect=None, read=None, redirect=None, status=None)) after connection broken by 'ConnectTimeoutError(<pip._vendor.urllib3.connection.HTTPSConnection object at 0x7f97c95079d0>, 'Connection to pypi.org timed out. (connect timeout=15)')': /simple/deepctr/\u001b[0m\n",
+      "Requirement already up-to-date: deepctr in /Users/hui/opt/anaconda3/lib/python3.8/site-packages (0.8.2)\n",
+      "Requirement already satisfied, skipping upgrade: requests in /Users/hui/opt/anaconda3/lib/python3.8/site-packages (from deepctr) (2.24.0)\n",
+      "Requirement already satisfied, skipping upgrade: h5py in /Users/hui/opt/anaconda3/lib/python3.8/site-packages (from deepctr) (2.10.0)\n",
+      "Requirement already satisfied, skipping upgrade: certifi>=2017.4.17 in /Users/hui/opt/anaconda3/lib/python3.8/site-packages (from requests->deepctr) (2020.6.20)\n",
+      "Requirement already satisfied, skipping upgrade: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /Users/hui/opt/anaconda3/lib/python3.8/site-packages (from requests->deepctr) (1.25.10)\n",
+      "Requirement already satisfied, skipping upgrade: chardet<4,>=3.0.2 in /Users/hui/opt/anaconda3/lib/python3.8/site-packages (from requests->deepctr) (3.0.4)\n",
+      "Requirement already satisfied, skipping upgrade: idna<3,>=2.5 in /Users/hui/opt/anaconda3/lib/python3.8/site-packages (from requests->deepctr) (2.10)\n",
+      "Requirement already satisfied, skipping upgrade: six in /Users/hui/opt/anaconda3/lib/python3.8/site-packages (from h5py->deepctr) (1.15.0)\n",
+      "Requirement already satisfied, skipping upgrade: numpy>=1.7 in /Users/hui/opt/anaconda3/lib/python3.8/site-packages (from h5py->deepctr) (1.19.4)\n"
+     ]
+    }
+   ],
    "source": [
-    "perl ./code/libfm/triple_format_to_libfm.pl -in ./titanic/test.csv -target 1 -delete_column 0 -separator \"::\"\n"
+    "# perl ./code/libfm/triple_format_to_libfm.pl -in ./titanic/test.csv -target 1 -delete_column 0 -separator \"::\"\n",
+    "!pip install -U deepctr"
    ]
   },
   {
@@ -133,26 +159,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2020-12-17T14:38:52.187Z"
+     "end_time": "2020-12-18T12:13:35.331813Z",
+     "start_time": "2020-12-18T12:13:35.316281Z"
     }
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting tensorflow\n",
-      "  Downloading tensorflow-2.4.0-cp38-cp38-macosx_10_11_x86_64.whl (175.5 MB)\n",
-      "\u001b[K     |██████████████████████▊         | 124.3 MB 13 kB/s eta 1:04:168"
+     "ename": "ImportError",
+     "evalue": "cannot import name 'SparseFeat' from 'deepctr.inputs' (/Users/hui/opt/anaconda3/lib/python3.8/site-packages/deepctr/inputs.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-17-a41f7d8a4380>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpreprocessing\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mLabelEncoder\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mdeepctr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodels\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mDeepFM\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mdeepctr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minputs\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mSparseFeat\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mget_feature_names\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;31m#数据加载\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'SparseFeat' from 'deepctr.inputs' (/Users/hui/opt/anaconda3/lib/python3.8/site-packages/deepctr/inputs.py)"
      ]
     }
    ],
    "source": [
     "#!pip install deepctr\n",
-    "!pip install tensorflow\n",
+    "# !pip install tensorflow\n",
     "import pandas as pd\n",
     "from sklearn.metrics import mean_squared_error\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -203,23 +232,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2020-12-17T15:41:08.911Z"
+     "end_time": "2020-12-18T12:09:35.185581Z",
+     "start_time": "2020-12-18T12:04:07.038074Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "Computing the msd similarity matrix...\n",
+      "Done computing similarity matrix.\n",
+      "           第一次       第二次       第三次        均值\n",
+      "rmse  0.858293  0.855608  0.855494  0.856465\n",
+      "mae   0.655689  0.654485  0.654445  0.654873\n"
+     ]
+    }
+   ],
    "source": [
     "## KNNWithMeans 方式\n",
     "from surprise import KNNWithMeans\n",
     "from surprise import Dataset, Reader\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "from surprise import accuracy\n",
+    "from surprise.model_selection import KFold\n",
     "\n",
     "# 数据读取\n",
     "reader = Reader(line_format='user item rating timestamp', sep=',', skip_lines=1)\n",
-    "data = Dataset.load_from_file('../week6/code/knn_cf/ratings.csv', reader=reader)\n",
+    "data = Dataset.load_from_file('./code/knn_cf/ratings.csv', reader=reader)\n",
     "\n",
     "# ItemCF 计算得分\n",
     "# 取最相似的用户计算时，只取最相似的k个\n",
@@ -257,6 +305,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.3"
   },
   "toc": {
    "base_numbering": 1,
